[project]
name = "rasa-deps"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Turnbull",email = "kevin@kevinturnbull.ca"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"


[tool.poetry]
packages = [{include = "rasa_deps", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
boto3 = "^1.26.136"
requests = "^2.23"
matplotlib = ">=3.1,<3.6"
urllib3 = "^1.26.5"
attrs = ">=19.3,<22.2"
jsonpickle = ">=1.3,<3.1"
redis = ">=4.5.3, <5.0"
absl-py = ">=0.9,<1.5"
apscheduler = ">=3.6,<3.10"
tqdm = "^4.31"
networkx = ">=2.4,<2.7"
fbmessenger = "~6.0.0"
pykwalify = ">=1.7,<1.9"
coloredlogs = ">=10,<16"
"ruamel.yaml" = ">=0.16.5,<0.17.22"
pyyaml = ">=6.0"
twilio = ">=6.26,<10.0"
webexteamssdk = ">=1.1.1,<1.7.0"
mattermostwrapper = "~2.2"
rocketchat_API = ">=0.6.31,<1.31.0"
colorhash = ">=1.0.2,<1.3.0"
jsonschema = ">=3.2,<4.18"
packaging = ">=20.0,<21.0"
pytz = ">=2019.1,<2023.0"
colorclass = "~2.2"
terminaltables = "~3.1.0"
sanic = "^21.12.0"
Sanic-Cors = "^2.0.0"
sanic-jwt = "^1.6.0"
sanic-routing = "^0.7.2"
websockets = ">=10.0,<12.0"
aiohttp = ">=3.9.0,<3.10"
questionary = ">=1.5.1,<1.11.0"
prompt-toolkit = "^3.0,<3.0.29"
python-socketio = ">=4.4,<6"
python-engineio = ">=4,<6,!=5.0.0"
pydot = "~1.4"
SQLAlchemy = ">=1.4.0,<1.5.0"
sklearn-crfsuite = "~0.3"
psycopg2-binary = ">=2.8.2,<2.10.0"
python-dateutil = "~2.8"
protobuf = ">=4.23.3,< 4.23.4"
tensorflow_hub = "^0.13.0"
setuptools = "~70.3.0"
ujson = ">=1.35,<6.0"
regex = ">=2020.6,<2022.11"
sentry-sdk = ">=0.17.0,<1.15.0"
aio-pika = ">=6.7.1,<8.2.4"
aiogram = "<2.26"
typing-extensions = ">=4.1.1,<5.0.0"
typing-utils = "^0.1.0"
tarsafe = ">=0.0.3,<0.0.5"
google-auth = "<3"
CacheControl = "^0.12.9"
randomname = "^0.1.5"
pluggy = "^1.0.0"
slack-sdk = "^3.19.2"
confluent-kafka = ">=1.9.2,<3.0.0"
portalocker = "^2.7.0"
structlog = "^23.1.0"
structlog-sentry = "^2.0.2"
dnspython = "2.3.0"
wheel = ">=0.38.1"
certifi = ">=2023.7.22"
cryptography = ">=41.0.7"
skops = "0.9.0"
safetensors = "~0.4.5"
[[tool.poetry.dependencies.tensorflow-io-gcs-filesystem]]
version = "==0.31"
markers = "sys_platform == 'win32'"

[[tool.poetry.dependencies.tensorflow-io-gcs-filesystem]]
version = "==0.32"
markers = "sys_platform == 'linux'"

[[tool.poetry.dependencies.tensorflow-io-gcs-filesystem]]
version = "==0.32"
markers = "sys_platform == 'darwin' and platform_machine != 'arm64'"

[[tool.poetry.dependencies.dask]]
version = "2022.2.0"
python = "~=3.7.0"

[[tool.poetry.dependencies.dask]]
version = "2022.10.2"
python = ">=3.8,<3.11"

[[tool.poetry.dependencies.numpy]]
version = ">=1.19.2,<1.22.0"
python = "~=3.7.0"

[[tool.poetry.dependencies.numpy]]
version = ">=1.19.2,<1.25.0"
python = ">=3.8,<3.11"

[[tool.poetry.dependencies.numpy]]
version = "1.22.3"
markers = "sys_platform =='Windows' and platform_python_implementation != 'PyPy'"
python = "3.10"

[[tool.poetry.dependencies.scipy]]
version = ">=1.4.1,<1.7.3"
python = "~=3.7.0"

[[tool.poetry.dependencies.scipy]]
version = ">=1.10.0,<1.11.0"
python = ">=3.8,<3.11"

[[tool.poetry.dependencies.scikit-learn]]
version = ">=0.22,<1.1"
python = "~=3.7.0"

[[tool.poetry.dependencies.scikit-learn]]
version = ">=0.22,<1.2"
python = ">=3.8,<3.11"

[[tool.poetry.dependencies.spacy]]
version = "^3.4"
markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"
optional = true

[[tool.poetry.dependencies.spacy]]
version = ">=3.1,<3.5"
markers = "sys_platform != 'darwin' or platform_machine != 'arm64'"
optional = true

[[tool.poetry.dependencies.pydantic]]
version = "<1.10.10"
optional = true

[tool.poetry.extras]
spacy = [ "spacy",]
jieba = [ "jieba",]
transformers = [ "transformers", "sentencepiece",]
full = [ "spacy", "transformers", "sentencepiece", "jieba",]
gh-release-notes = [ "github3.py",]
metal = [ "tensorflow-metal",]

[tool.poetry.dependencies.tensorflow]
version = "2.12.0"
markers = "sys_platform != 'darwin' or platform_machine != 'arm64'"

[tool.poetry.dependencies.tensorflow-intel]
version = "2.12.0"
markers = "sys_platform == 'win32'"

[tool.poetry.dependencies.tensorflow-cpu-aws]
version = "2.12.0"
markers = "sys_platform == 'linux' and (platform_machine == 'arm64' or platform_machine == 'aarch64')"

[tool.poetry.dependencies.tensorflow-macos]
version = "2.12.0"
markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"

[tool.poetry.dependencies.PyJWT]
version = "^2.0.0"
extras = [ "crypto",]

[tool.poetry.dependencies.colorama]
version = "^0.4.4"
markers = "sys_platform == 'win32'"

[tool.poetry.dependencies.tensorflow-metal]
version = "0.8.0"
markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"
optional = true

[tool.poetry.dependencies.tensorflow-text]
version = "2.12.0"
markers = "sys_platform != 'win32' and platform_machine != 'arm64' and platform_machine != 'aarch64'"

[tool.poetry.dependencies."github3.py"]
version = "~3.2.0"
optional = true

[tool.poetry.dependencies.transformers]
version = "~4.36.2"
optional = true

[tool.poetry.dependencies.sentencepiece]
version = "~0.1.99"
optional = true
extras = [ "sentencepiece",]

[tool.poetry.dependencies.jieba]
version = ">=0.39, <0.43"
optional = true

[tool.poetry.dependencies.pymongo]
version = ">=3.8,<4.4"
extras = [ "tls", "srv",]